1.7/manifests/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output-node
  template:
    metadata:
      labels:
        app: log-output-node
    spec:
      containers:
      - name: log-output-node
        image: johnd0es/log-output-node:4.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
