1.7/manifests/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-node
spec:
  rules:
  - host: logoutput.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: log-output-node
            port:
              number: 80
